Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.8, 6.2.2
-
Fix Version/s: 6.2.5, 6.4.0 RC1, 6.5.0 Beta1
-
Component/s: GUI: Printing
-
Platform/s:
-
Commits:b2fb14b7ba (qt/qtbase/dev) b2fb14b7ba (qt/tqtc-qtbase/dev) 0f4cd1ef44 (qt/qtbase/6.3) 0f4cd1ef44 (qt/tqtc-qtbase/6.3) a43dcba4fd (qt/tqtc-qtbase/6.2) 5ea55bc1bc (qt/qtbase/6.4) 5ea55bc1bc (qt/tqtc-qtbase/6.4)
Description
Attached application sets page orientation to Landscape and shows print dialog. After accepting, for example, Save to PDF, the page orientation is reset back to the default Portrait option.
This likely only happens when there is no printer installed to the system.